# event-recorder

./: README.md  config.example.toml  pyproject.toml  requirements.txt
myrecorder/: __main__.py  ai_client.py  ai_worker.py  app.py  config.py  ffmpeg_utils.py  ipc.py  m3u8_loader.py  proc1.py
recording_system_r4/: ai_client.py  config.py  ffmpeg_utils.py  hls.py  m3u8_loader.py  proc1.py  proc2.py  recording.py  slack_upload.py
tests/: test_ffmpeg_hls_task.py  test_hls.py  test_ipc.py  test_recording_timestamp.py
