[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "recording-system-r4"
version = "0.1.0"
description = "Async RTSP to HLS recorder with MediaPipe AF_UNIX AI trigger"
requires-python = ">=3.11"
dependencies = [
  "mediapipe>=0.10",
  "numpy>=1.24",
  "Pillow>=10.0",
  "slack-sdk>=3.27",
]

[project.scripts]
recording-r4-proc1 = "recording_system_r4.proc1:main"
recording-r4-proc2 = "recording_system_r4.proc2:main"
