[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "myrecorder"
version = "0.2.0"
description = "Async RTSP to HLS recorder with MediaPipe ProcessPool AI trigger"
requires-python = ">=3.11"
dependencies = [
  "mediapipe>=0.10",
  "numpy>=1.24",
  "Pillow>=10.0",
  "slack-sdk>=3.27",
]

[project.scripts]
myrecorder = "myrecorder.app:main"
